# browsercontrol

./: .clang-format  .cmake-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README
.github/workflows/: build-all.yml  build-linux.yml  build-on-push.yml  build-windows.yml  release.yml
cmake/Modules/: DownloadCEF.cmake  FindCEF.cmake  FindXCB.cmake  NuGetFetch.cmake  NugetFetch.cmake  nugetfetch.cmake
cmake/templates/: META.in
examples/: CMakeLists.txt
examples/AppletViewer/: build.gradle.kts  settings.gradle.kts
examples/AppletViewer/src/main/java/com/open592/appletviewer/: AdvertComponentListener.java  AdvertFrame.java  AppletViewer.java  TerminateHandler.java
examples/AppletViewer/src/main/java/nativeadvert/: browsercontrol.java
examples/ExampleAppletViewer/: AdvertComponentListener.java  AdvertFrame.java  ExampleAppletViewer.java  TerminateHandler.java
examples/nativeadvert/: browsercontrol.java
include/: browsercontrol.h
scripts/: checksum.py
src/: AbstractBrowserControl.hpp  AbstractBrowserWindow.h  AbstractBrowserWindow.hpp  Browser.cpp  Browser.hpp  BrowserContext.cpp  BrowserContext.hpp  BrowserData.cpp  BrowserData.hpp  CMakeLists.txt  DesktopBrowser.hpp  DesktopBrowserLauncher.hpp  browsercontrol.cpp
src/platform/linux/: BrowserApp.cpp  BrowserApp.hpp  BrowserControlApp.cpp  BrowserControlApp.hpp  BrowserControlClient.cpp  BrowserControlClient.hpp  BrowserEventLoop.cpp  BrowserEventLoop.hpp  BrowserHandler.cpp  BrowserHandler.hpp  BrowserWindow.cpp  BrowserWindow.hpp  CEFBrowserControl.cpp  CEFBrowserControl.hpp  CMakeLists.txt  CefBrowserProcess.cpp  CefBrowserProcess.hpp  ContainerWindow.cpp  ContainerWindow.hpp  DesktopBrowserLauncher.cpp  DesktopBrowserLauncher.hpp  DisplayConnection.cpp  DisplayConnection.hpp  JVMSignals.cpp  JVMSignals.hpp  LinuxBrowserContext.cpp  LinuxBrowserContext.hpp  LinuxBrowserControl.cpp  LinuxBrowserControl.hpp  LinuxBrowserData.cpp  LinuxBrowserData.hpp  LinuxDesktopBrowser.cpp  LinuxDesktopBrowser.hpp  LinuxDesktopBrowserLauncher.cpp  LinuxDesktopBrowserLauncher.hpp  helper.cpp  init.cpp  pch.hpp
src/platform/windows/: BrowserData.cpp  BrowserData.hpp  CMakeLists.txt  WebView2BrowserWindow.cpp  WebView2BrowserWindow.hpp  Win32BrowserControl.cpp  Win32BrowserControl.hpp  WindowsBrowserContext.cpp  WindowsBrowserContext.hpp  WindowsBrowserData.cpp  WindowsBrowserData.hpp  init.cpp  pch.hpp
